<resources>
    <string name="app_name">CropWIS</string>
    <string name="google_maps_key" translatable="false">AIzaSyCdk9t55d2vDb5Mh9TB915GfZWaI3SOVW0</string>
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>

    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="later">Later</string>

    <string name="wind">Wind</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="uvindex">UV Index</string>

    <string name="last_update">Last update:\n%s</string>
    <string name="last_update_widget">\nLast update: %s</string>

    <string name="search_title">Search for city</string>

    <string name="downloading_data">Downloading your data ...</string>
    <string name="getting_location">Getting your location ...</string>

    <string name="loading_data">Loading...</string>

    <string name="error_dateFormat">DATE FORMAT ERROR</string>

    <string name="setting_dateFormat">Date Format</string>
    <string name="setting_dateFormatCustom">Custom Date Format</string>
    <string name="setting_dateFormatCustom_summary">Provide the custom SimpleDateFormat string to be used</string>
    <string name="setting_lengthUnits">Length units</string>
    <string name="setting_speedUnits">Speed units</string>
    <string name="setting_tempUnits">Temperature units</string>
    <string name="setting_showTempAsInteger">Show temperature only as an integer</string>
    <string name="setting_pressureUnits">Pressure units</string>
    <string name="setting_theme">Theme</string>
    <string name="setting_transparent_widget">Make widget transparent</string>
    <string name="setting_auto_detect_location">Detect Location</string>
    <string name="setting_differentiateDaysByTint">Differentiate Days with Color</string>
    <string name="setting_refreshInterval">Background refresh interval</string>
    <string name="setting_unit_mps">Meters per second (m/s)</string>
    <string name="setting_unit_kph">Kilometers per hour (kph)</string>
    <string name="setting_unit_mph">Miles per hour (mph)</string>
    <string name="setting_unit_bft">Beaufort wind scale (bft)</string>
    <string name="setting_unit_kn">Knots (kn)</string>
    <string name="setting_wind_direction_format">Wind direction format</string>
    <string name="settings_none">None</string>
    <string name="setting_apiKey">API key</string>
    <string name="setting_apiKey_summary">Custom API key for OpenWeatherMap queries</string>

    <string name="setting_unit_Celsuis">Celsius</string>
    <string name="setting_unit_Fahrenheit">Fahrenheit</string>
    <string name="setting_unit_Kelvin">Kelvin</string>

    <string name="setting_unit_mm">Millimeters (mm)</string>
    <string name="setting_unit_in">Inches (in)</string>

    <string name="setting_unit_hpa">hPa</string>
    <string name="setting_unit_kpa">kPa</string>
    <string name="setting_unit_mmhg">mm Hg</string>
    <string name="setting_unit_inhg">in Hg</string>

    <string name="speed_unit_mps">m/s</string>
    <string name="speed_unit_kph">kph</string>
    <string name="speed_unit_mph">mph</string>
    <string name="speed_unit_kn">kn</string>

    <string name="wind_direction_format_none">No indication</string>
    <string name="wind_direction_format_arrows">Arrows</string>
    <string name="wind_direction_format_abbreviations">Abbreviations</string>

    <string name="pressure_unit_hpa">hPa</string>
    <string name="pressure_unit_kpa">kPa</string>
    <string name="pressure_unit_mmhg">mm Hg</string>

    <string name="setting_theme_fresh">Fresh</string>
    <string name="setting_theme_classic">Classic</string>
    <string name="setting_theme_dark">Fresh Dark</string>
    <string name="setting_theme_classic_dark">Classic Dark</string>
    <string name="setting_theme_black">Fresh Black</string>
    <string name="setting_theme_classic_black">Classic Black</string>

    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="msg_err_parsing_json">Error parsing JSON.</string>
    <string name="msg_connection_problem">There is a problem with your internet connection.</string>
    <string name="msg_connection_not_available">Connection not available.</string>
    <string name="msg_city_not_found">Specified city is not found.</string>

    <string name="weather_sunny" translatable="false">&#xf00d;</string>
    <string name="weather_clear_night" translatable="false">&#xf02e;</string>
    <string name="weather_foggy" translatable="false">&#xf014;</string>
    <string name="weather_cloudy" translatable="false">&#xf013;</string>
    <string name="weather_rainy" translatable="false">&#xf019;</string>
    <string name="weather_snowy" translatable="false">&#xf01b;</string>
    <string name="weather_thunder" translatable="false">&#xf01e;</string>
    <string name="weather_drizzle" translatable="false">&#xf01c;</string>

    <string name="wind_direction_north">N</string>
    <string name="wind_direction_north_north_east">NNE</string>
    <string name="wind_direction_north_east">NE</string>
    <string name="wind_direction_east_north_east">ENE</string>
    <string name="wind_direction_east">E</string>
    <string name="wind_direction_east_south_east">ESE</string>
    <string name="wind_direction_south_east">SE</string>
    <string name="wind_direction_south_south_east">SSE</string>
    <string name="wind_direction_south">S</string>
    <string name="wind_direction_south_south_west">SSW</string>
    <string name="wind_direction_south_west">SW</string>
    <string name="wind_direction_west_south_west">WSW</string>
    <string name="wind_direction_west">W</string>
    <string name="wind_direction_west_north_west">WNW</string>
    <string name="wind_direction_north_west">NW</string>
    <string name="wind_direction_north_north_west">NNW</string>
    <string name="msg_too_many_requests">Too many requests. Please try again.</string>

    <!-- 1: temperature; 2: unit -->
    <string name="dash_clock_status">%1$s%2$s</string>
    <!-- 1: temperature; 2: unit; 3: weather5Day description -->
    <string name="dash_clock_expanded_title">%1$s%2$s - %3$s</string>
    <!-- 1: city; 2: country; 3: wind; 4: speed units; 5: pressure; 6: pressure units; 7: humidity -->
    <string name="dash_clock_expanded_body">%1$s, %2$s\nWind: %3$s %4$s\nPressure: %5$s %6$s\nHumidity: %7$s %%\n</string>
    <string name="settings_title_units">Units</string>
    <string name="settings_title_display">Display</string>
    <string name="settings_title_data">Data</string>
    <string name="setting_displayDecimalZeroes">Display decimal zeroes</string>
    <string name="settings_title_location">Location</string>
    <string name="setting_update_location_automatically">Update location in background</string>

    <string name="location_settings">Location Settings</string>
    <string name="location_settings_message">Location is not enabled. Do you wish to go to the settings menu?</string>
    <string name="location_settings_button">Settings</string>
    <string name="action_weather_map">Weather Map</string>
    <string name="rain">Rain</string>
    <string name="temperature">Temperature</string>
    <string name="action_graphs">Graphs</string>
    <string name="about_dialog">Uganda Crop Infomation System</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="weather_forecast">Weather forecast</string>
    <string name="hotspots_area">Hotspots area</string>
    <string name="crop_growing_sesson">Crop Growing Season</string>
    <string name="image">image</string>
    <string name="hotspot_value_hint">-49</string>
    <string name="hotspot_name3_hint">Rukungiri Tc</string>
    <string name="date_hint">[ Jan, 2018 ]</string>
    <string name="about_1">\t\t\t\tCropWIS is a cross platform geo-web and mobile phone application with current location based functionality/ geographical position system (GPS) for broadcasting daily weather5Day and crop early warning predictions and alerts to farm communities and policymakers using the latest state of the art ICT platform for hosting and delivering digital data. The project is supported by USAID through the US-NFS and implemented by Makerere University and University of Zambia.</string>
    <string name="about_preferences">About</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="clear">Clear</string>
    <string name="sending_request">Sending request</string>
    <string name="wait_please">Wait please</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="no_selected">[No Selected]</string>
    <string name="cant_init_map">Can\'t init map</string>
    <string name="get_info">Get Info</string>
    <string name="district">District</string>
    <string name="parish">Parish</string>
    <string name="value">Value</string>
    <string name="village">Village</string>
    <string name="season">Season</string>
    <string name="date">Date</string>
    <string name="sub_country">Sub Country</string>
    <string name="no_info">No Information</string>
    <string name="search_hint">Search location...</string>
    <string name="enter_search_location_pls">Search Location is empty</string>
    <string name="fake_address">Fake Address</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="length">Length</string>
    <string name="crop_season_1">Crop Season 1</string>
    <string name="crop_season_2">Crop Season 2</string>
    <string name="location_hint">Parish, Village, District, SubCountry</string>
    <string name="season_layers">Season Layers</string>
    <string name="season_2">Season 2</string>
    <string name="season_1">Season 1</string>
    <string name="no_layer">No Layer</string>
    <string name="teamleader_about">\t\t\t\tTeam leader: Dr. John Wasige, College of Agricultural &amp; Environmental Sciences, Makererere University, Uganda</string>
    <string name="phone_about">\t\t\t\tPhone: +256772324005</string>
    <string name="email_about">\t\t\t\tEmail: johnwasige@gmail.com</string>
</resources>
