<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".about.AboutFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        android:padding="0dp">

        <LinearLayout
            android:id="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <TextView
                android:id="@+id/main_menu_header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:paddingTop="62dp"
                android:text="@string/app_name"
                android:textSize="21sp"
                android:textStyle="bold"/>
            <TextView
                android:text="@string/about_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"/>

            <TextView
                android:text="@string/teamleader_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"/>
            <TextView
                android:text="@string/phone_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"/>
            <TextView
                android:text="@string/email_about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_below="@+id/top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:weightSum="5"
            >
            <ImageView
                android:contentDescription="@string/image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:padding="5dp"
                android:src="@drawable/usaid"/>
            <ImageView
                android:contentDescription="@string/image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:src="@drawable/nsf"/>
            <ImageView
                android:contentDescription="@string/image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:src="@drawable/logo_about_3"/>
            <ImageView
                android:contentDescription="@string/image"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="5dp"
                android:src="@drawable/logo_about_4"/>
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>