<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cropgrowingseason.CropGrowingSeasonFragment">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true"
        android:clickable="true"
        android:focusable="true"/>

    <ImageView
        android:src="@drawable/ic_crosshair_24"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal|center_vertical"
        android:tint="@color/material_red_500"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <androidx.cardview.widget.CardView
            android:layout_marginTop="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="48dp"
            android:elevation="3dp">
            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />
        </androidx.cardview.widget.CardView>

        <Button
            android:id="@+id/btnGetInfo"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:text="@string/get_info"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewInfo"
        android:background="#ffffff"
        android:layout_margin="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/tvSeasonLabel"
                    android:text=""
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <ImageView
                    android:src="@drawable/ic_calendar"
                    android:contentDescription="@string/image"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:id="@+id/tvSeasonDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:width="100dp"
                    android:text="@string/season"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvSeason"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="100dp"/>

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/sub_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="100dp"/>

                <TextView
                    android:id="@+id/tvSubCountry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/district"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="100dp"/>

                <TextView
                    android:id="@+id/tvDistrict"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/parish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="100dp"/>

                <TextView
                    android:id="@+id/tvParish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/village"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:width="100dp"/>

                <TextView
                    android:id="@+id/tvVillage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>