<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?android:attr/selectableItemBackground">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/tvHotspotName3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="@string/hotspot_name3_hint"
                android:textSize="14sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="30dp"
            android:paddingEnd="14dp"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tvHotspotValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="@string/hotspot_value_hint"
                android:textColor="@color/material_red_500"
                android:textSize="16sp" />
            <ImageView
                android:contentDescription="@string/image"
                android:src="@drawable/ic_tint_slash_solid"
                android:layout_width="20dp"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#eeeeee" />

</LinearLayout>
