<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".fragments.NavigationDrawerFragment">

    <RelativeLayout
        android:id="@+id/nav_header_container"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:contentDescription="@string/image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:scaleType="fitCenter"
            android:src="@drawable/maize"/>

    </RelativeLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="13dp"
            android:text="Application"
            android:textColor="#999999"
            android:paddingLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:id="@+id/menuWeatherForecast"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_wb_sunny_black_18dp"
                android:tint="@color/blackTheme_colorAccent"/>

            <TextView
                android:text="@string/weather_forecast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textColor="@android:color/black"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menuHotspotArea"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_cloud_white_48dp"
                android:tint="@color/blackTheme_colorAccent"/>

            <TextView
                android:text="@string/hotspots_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textColor="@android:color/black"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/menuCropGrowingSesson"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_spa_black_24dp"
                android:tint="@color/blackTheme_colorAccent"/>

            <TextView
                android:text="@string/crop_growing_sesson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textColor="@android:color/black"
                android:textSize="14sp"/>
        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:textSize="13dp"
            android:text="Navigation"
            android:textColor="#999999"
            android:paddingLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:id="@+id/menuSettings"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_settings_black_18dp"
                android:tint="@color/blackTheme_colorAccent"/>

            <TextView
                android:text="Settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textColor="@android:color/black"
                android:textSize="14sp"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/menuAbout"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:src="@drawable/ic_info_black_18dp"
                android:tint="@color/blackTheme_colorAccent"/>

            <TextView
                android:text="About"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:textColor="@android:color/black"
                android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>